[gd_scene load_steps=32 format=2]

[ext_resource path="res://VRScene.gd" type="Script" id=1]
[ext_resource path="res://ARVRCamera.gd" type="Script" id=2]
[ext_resource path="res://hud_arrow_right.tscn" type="PackedScene" id=3]
[ext_resource path="res://hud_left_arrow.tscn" type="PackedScene" id=4]
[ext_resource path="res://hud_too_low.tscn" type="PackedScene" id=5]
[ext_resource path="res://HUDView.gd" type="Script" id=6]
[ext_resource path="res://PointIndicatorSprite.tscn" type="PackedScene" id=7]
[ext_resource path="res://scripts/HeartRateReceiver.gd" type="Script" id=8]
[ext_resource path="res://AreaHead.gd" type="Script" id=9]
[ext_resource path="res://audio/hand_hit.wav" type="AudioStream" id=10]
[ext_resource path="res://scenes/SkyBox.tscn" type="PackedScene" id=11]
[ext_resource path="res://MultiplayerRoom/MultiplayerRoom.gd" type="Script" id=12]
[ext_resource path="res://MultiplayerRoom/PlayerArea.gd" type="Script" id=13]
[ext_resource path="res://MultiplayerRoom/RemoteSpatial.gd" type="Script" id=14]
[ext_resource path="res://scripts/SongDatabase.gd" type="Script" id=15]
[ext_resource path="res://audio/head_hit.wav" type="AudioStream" id=16]
[ext_resource path="res://scripts/PauseHandler.gd" type="Script" id=17]
[ext_resource path="res://RemoteInterface.gd" type="Script" id=18]
[ext_resource path="res://scripts/VisualRayCast.gd" type="Script" id=19]
[ext_resource path="res://scenes/YoutubeInterface.tscn" type="PackedScene" id=20]
[ext_resource path="res://scenes/GASTWebView.tscn" type="PackedScene" id=21]
[ext_resource path="res://scenes/NetworkARVRController.tscn" type="PackedScene" id=22]
[ext_resource path="res://scenes/SimplePhone.tscn" type="PackedScene" id=23]
[ext_resource path="res://scenes/Keyboard.tscn" type="PackedScene" id=24]

[sub_resource type="SphereShape" id=1]
radius = 0.12

[sub_resource type="CubeMesh" id=2]

[sub_resource type="SpatialMaterial" id=3]
flags_transparent = true
flags_unshaded = true
params_cull_mode = 2
albedo_color = Color( 0.752941, 0, 0, 0.345098 )

[sub_resource type="CubeMesh" id=4]
size = Vector3( 0.4, 0.4, 0.4 )

[sub_resource type="SpatialMaterial" id=5]
flags_unshaded = true
params_cull_mode = 2
albedo_color = Color( 0, 0, 0, 1 )

[sub_resource type="Animation" id=6]
resource_name = "starfield_rotation"
length = 300.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 300 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 360, 0, 360 ) ]
}

[sub_resource type="PrismMesh" id=7]
size = Vector3( 0.1, 0.2, 0.02 )

[node name="VRScene" type="Spatial"]
script = ExtResource( 1 )

[node name="ARVROrigin" type="ARVROrigin" parent="."]

[node name="ARVRCamera" type="ARVRCamera" parent="ARVROrigin"]
pause_mode = 2
far = 300.0
script = ExtResource( 2 )

[node name="RayCast" type="RayCast" parent="ARVROrigin/ARVRCamera"]
enabled = true
cast_to = Vector3( 0, 0, -5 )
script = ExtResource( 19 )

[node name="RemoteSpatial" type="Spatial" parent="ARVROrigin/ARVRCamera"]
transform = Transform( 0.971259, 0, -0.238025, 0, 1, 0, 0.238025, 0, 0.971259, 0, 0, 0 )
script = ExtResource( 14 )
is_local = true
transform_parent = true

[node name="AreaHead" type="Area" parent="ARVROrigin/ARVRCamera"]
script = ExtResource( 9 )

[node name="CollisionShape" type="CollisionShape" parent="ARVROrigin/ARVRCamera/AreaHead"]
shape = SubResource( 1 )

[node name="hit_player" type="AudioStreamPlayer" parent="ARVROrigin/ARVRCamera/AreaHead"]
stream = ExtResource( 16 )
volume_db = 3.969

[node name="ScreenTint" type="MeshInstance" parent="ARVROrigin/ARVRCamera"]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0 )
visible = false
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="Blackout" type="MeshInstance" parent="ARVROrigin/ARVRCamera"]
visible = false
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="Countdown" parent="ARVROrigin/ARVRCamera" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.108, -0.878 )
visible = false
default_text = "5"

[node name="HUDView" type="Spatial" parent="ARVROrigin/ARVRCamera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.108, -0.878 )
script = ExtResource( 6 )

[node name="Level1" type="Spatial" parent="ARVROrigin/ARVRCamera/HUDView"]
transform = Transform( 0.2, 0, 0, 0, -3.25841e-08, -0.2, 0, 0.2, -3.25841e-08, 0, -0.2, 0 )
visible = false

[node name="left_arrow" parent="ARVROrigin/ARVRCamera/HUDView/Level1" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 3.55271e-15, 0, 0, 1, 1.8, 0, 0 )

[node name="right_arrow" parent="ARVROrigin/ARVRCamera/HUDView/Level1" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.8, 0, 0 )

[node name="Level2" type="Spatial" parent="ARVROrigin/ARVRCamera/HUDView"]
transform = Transform( 0.2, 0, 0, 0, -3.25841e-08, -0.2, 0, 0.2, -3.25841e-08, 0, -0.2, 0 )
visible = false

[node name="left_arrow" parent="ARVROrigin/ARVRCamera/HUDView/Level2" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 3.55271e-15, 0, 0, 1, 1.4, 0, 0 )

[node name="right_arrow" parent="ARVROrigin/ARVRCamera/HUDView/Level2" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.4, 0, 0 )

[node name="Level3" type="Spatial" parent="ARVROrigin/ARVRCamera/HUDView"]
transform = Transform( 0.2, 0, 0, 0, -3.25841e-08, -0.2, 0, 0.2, -3.25841e-08, 0, -0.2, 0 )
visible = false

[node name="left_arrow" parent="ARVROrigin/ARVRCamera/HUDView/Level3" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 3.55271e-15, 0, 0, 1, 1, 0, 0 )

[node name="right_arrow" parent="ARVROrigin/ARVRCamera/HUDView/Level3" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, 0 )

[node name="Level4" type="Spatial" parent="ARVROrigin/ARVRCamera/HUDView"]
transform = Transform( 0.2, 0, 0, 0, -3.25841e-08, -0.2, 0, 0.2, -3.25841e-08, -0.013, -0.2, 0 )
visible = false

[node name="too_low" parent="ARVROrigin/ARVRCamera/HUDView/Level4" instance=ExtResource( 5 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -0.523, -0.052, 0 )

[node name="HUDHideTimer" type="Timer" parent="ARVROrigin/ARVRCamera"]
one_shot = true

[node name="RemoteTransformSkybox" type="RemoteTransform" parent="ARVROrigin/ARVRCamera"]
remote_path = NodePath("../../SkyBox")
update_rotation = false
update_scale = false

[node name="OmniLight" type="DirectionalLight" parent="ARVROrigin"]
transform = Transform( 1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 5, 4 )
visible = false
light_energy = 0.2
light_indirect_energy = 0.1
light_specular = 0.2

[node name="SkyBox" parent="ARVROrigin" instance=ExtResource( 11 )]
transform = Transform( 0.99841, 0.056602, 1.78814e-07, -0.0565104, 0.996796, 0.0566011, 0.00320494, -0.0565112, 0.998413, 0, 0, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="ARVROrigin/SkyBox"]
anims/starfield_rotation = SubResource( 6 )

[node name="NetworkARVRController" parent="ARVROrigin" instance=ExtResource( 22 )]
transform = Transform( -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0 )

[node name="Mesh" type="Spatial" parent="ARVROrigin/NetworkARVRController"]

[node name="Phone" parent="ARVROrigin/NetworkARVRController/Mesh" instance=ExtResource( 23 )]
transform = Transform( 0.1, 1.74845e-08, 0, -1.74845e-08, 0.1, 0, 0, 0, 0.1, 0, 0, 0 )

[node name="Compass" type="MeshInstance" parent="ARVROrigin/NetworkARVRController/Mesh"]
transform = Transform( 1, 1.06581e-14, 0, -1.06581e-14, 1, 0, 0, 0, 1, 0, 0, 0 )
mesh = SubResource( 7 )

[node name="Keyboard" parent="ARVROrigin" instance=ExtResource( 24 )]
transform = Transform( 0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 0, 0, 0 )
visible = false

[node name="DemoTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="HeartRateReceiver" type="Node" parent="."]
script = ExtResource( 8 )

[node name="HitPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -2.5

[node name="RemoteInterface" type="Node" parent="."]
script = ExtResource( 18 )

[node name="MultiplayerRoom" type="Spatial" parent="."]
script = ExtResource( 12 )

[node name="PlayerAreaOffset" type="Spatial" parent="MultiplayerRoom"]

[node name="PlayerArea" type="Spatial" parent="MultiplayerRoom/PlayerAreaOffset"]
script = ExtResource( 13 )

[node name="SongDatabase" type="Node" parent="."]
script = ExtResource( 15 )

[node name="PauseHandler" type="Spatial" parent="."]
script = ExtResource( 17 )

[node name="YoutubeInterface" parent="." instance=ExtResource( 20 )]
pause_mode = 2

[node name="WebView" parent="." instance=ExtResource( 21 )]
script = null

[connection signal="body_entered" from="ARVROrigin/ARVRCamera/AreaHead" to="ARVROrigin/ARVRCamera/AreaHead" method="_on_AreaHead_body_entered"]
[connection signal="timeout" from="ARVROrigin/ARVRCamera/HUDHideTimer" to="ARVROrigin/ARVRCamera" method="_on_HUDHideTimer_timeout"]
[connection signal="timeout" from="DemoTimer" to="." method="_on_DemoTimer_timeout"]
[connection signal="add_spatial" from="MultiplayerRoom" to="MultiplayerRoom/PlayerAreaOffset/PlayerArea" method="_on_MultiplayerRoom_add_spatial"]
[connection signal="game_message" from="MultiplayerRoom" to="." method="_on_MultiplayerRoom_game_message"]
[connection signal="remove_spatial" from="MultiplayerRoom" to="MultiplayerRoom/PlayerAreaOffset/PlayerArea" method="_on_MultiplayerRoom_remove_spatial"]
[connection signal="room_joined" from="MultiplayerRoom" to="." method="_on_MultiplayerRoom_room_joined"]
[connection signal="room_left" from="MultiplayerRoom" to="." method="_on_MultiplayerRoom_room_left"]
[connection signal="spatial_offset_message" from="MultiplayerRoom" to="MultiplayerRoom/PlayerAreaOffset/PlayerArea" method="_on_set_spatial_offset"]
[connection signal="user_leave" from="MultiplayerRoom" to="MultiplayerRoom/PlayerAreaOffset/PlayerArea" method="_on_MultiplayerRoom_user_leave"]
